@@ -153,7 +153,7 @@ code size heuristics.  It is enabled by default when compiling at -O3.
 <dd>
 Gary Benson from Red Hat has released 
 <a href="http://people.redhat.com/gbenson/naoko/">Naoko</a>: a subset 
-of the <a href="http://sources.redhat.com/rhug/">rhug</a> packages 
+of the <a href="http://sourceware.org/rhug/">rhug</a> packages 
 that have been repackaged for eventual inclusion in Red Hat Linux. 
 Naoko basically comprises binary RPMS of Ant, Tomcat, and their 
 dependencies built with gcj.
@@ -172,8 +172,8 @@ A team of hackers from Red Hat has released RPMS for a version
 of <a href="http://www.eclipse.org/">Eclipse</a>, a free software IDE
 written in Java, that has been compiled with a modified gcj.
 You can find more information
-<a href="http://sources.redhat.com/eclipse/">here</a>.  We'll be
-integrating the required gcj patches into cvs in the near future.
+<a href="http://sourceware.org/eclipse/">here</a>.  We'll be
+integrating the required gcj patches in the near future.
 </dd>
 
 <dt>July 31, 2003</dt>
@@ -426,7 +426,7 @@ find bugs!
 <dt>February 8, 2001</dt>
 <dd>
 Made use of Warren Levy's change to the
-<a href="http://sources.redhat.com/mauve/">Mauve test suite</a> to handle
+<a href="http://sourceware.org/mauve/">Mauve test suite</a> to handle
 regressions.
 Modifications have been made to <tt>mauve.exp</tt> to copy the newly created
 <tt>xfails</tt> file of known library failures from the source tree
@@ -434,9 +434,9 @@ to the directory where the libjava <tt>'make check'</tt> is being run.
 This allows the testsuite to ignore <tt>XFAIL</tt>s and thus highlight
 true regressions in the library.  The Mauve tests are
 automatically run as part of a libjava
-<tt>'make check'</tt> as long as the Mauve suite is accessible
-and the env var <tt>MAUVEDIR</tt> is set to point to the top-level
-of the <a href="http://sources.redhat.com/mauve/download.html">Mauve source</a>.
+<code>make check</code> as long as the Mauve suite is accessible and the
+environment variable <code>MAUVEDIR</code> is set to point to the top-level
+of the Mauve sources.
 </dd>
 
 <dt>January 28, 2001</dt>
