@@ -1,3 +1,10 @@
+2012-10-21  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* news.html: Replace references to sources.redhat.com by
+	sourceware.org.
+	Avoid a reference to CVS.
+	Some style adjustments to the February 8, 2001 entry.
+
 2011-11-01  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* status.html: Use <h2> instead of fake tables.
